--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "coding challenge",
   "main": "./src/index.js",
   "scripts": {
-    "start": "nodemon ./src/index.js && npm start"
+    "client": "cd ./src/frontend && npm start",
+    "server": "nodemon ./src/index.js",
+    "start": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "walmex-team",
   "license": "ISC",
   "dependencies": {
     "axios": "^0.21.1",
+    "concurrently": "^6.2.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "lodash": "^4.17.21"
