--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "coding challenge",
   "main": "./src/index.js",
   "scripts": {
-    "client": "cd ./src/frontend && npm start",
+    "client": "cd ./src/frontend && npm install && npm start",
     "server": "nodemon ./src/index.js",
     "start": "concurrently \"npm run server\" \"npm run client\""
   },
